:bug: fix tabs missing border

--- a/packages/theme-nonepress/src/theme/Tabs/styles.css
+++ b/packages/theme-nonepress/src/theme/Tabs/styles.css
@@ -14,8 +14,6 @@
   &-item {
     --tab-border-color: transparent;
 
-    @apply transition-[color,background-color] duration-500;
-
     &-active {
       --tab-border-color: oklch(var(--bc) / 10%);
     }
